--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -15,6 +15,20 @@
 
 .image-container {
   margin: 10px;
-  display:inline-block;
+  display: inline-block;
+}
+
+.description-container {
+  display: block;
+  width: 138px;
+  height: 140px;
+  border: 1px solid black;
+  font-size: 18px;
+  padding: 5px;
+}
+
+button {
+  display: block;
+  margin: 5px auto;
 }
 
